changes in values

--- a/charts/django-app/values.yaml
+++ b/charts/django-app/values.yaml
@@ -12,11 +12,11 @@ autoscaling:
 env:
   SECRET_KEY: "your-secret-key"
   DEBUG: "False"
-  DATABASE_NAME: "your-db-name"
-  DATABASE_USER: "your-db-user"
-  DATABASE_PASSWORD: "your-db-password"
-  DATABASE_HOST: "my-postgresql"
+  DATABASE_HOST: "postgresql.postgres.cluster.svc.local"
   DATABASE_PORT: "5432"
+  DATABASE_USER: "admin"  
+  DATABASE_PASSWORD: "cG9zdGdyZXM="  
+  DATABASE_NAME: "django"
 
 service:
   port: 8080
